# CS205-C-C-Program-Design

./: CMakeLists.txt  README.md  cmake_install.cmake  mat-A-32.txt  mat-A-4.txt  mat-A-512.txt  mat-A-64.txt  test  test.c
data/: mat-A-128.txt  mat-A-16.txt
project1/: source.cpp
project2/: BigDecimal.cpp  BigDecimal.h  CMakeCache.txt  CMakeLists.txt  Calculator.cpp  Calculator.h  Helper.cpp  Main.cpp  Makefile  MathFunc.cpp  Variables.cpp  cmake_install.cmake  main
project3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c  mat-A-16.txt  mat-A-256.txt  mat-A-4.txt  mat-A-64.txt  mat-B-256.txt  mat-B-64.txt  mat.c  mat.h
project4/: CMakeCache.txt  Makefile  main  main.c  mat.c  mat.h  matmul.c
project5/: Mat.hpp  main.cpp
